fixed the scrolling on mobile

--- a/xo-game/index.css
+++ b/xo-game/index.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    height: 100vh;
+    height: 100dvh;
     width: auto;
     margin: 0;
     padding-top: 30px;
